--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="mailto:prashantmdgl9@gmail.com"
+   			<a href="mailto:prashant.mudgal@eesti.com"
         <div class="icon">
           <i class="fa fa-envelope" style="font-size:36px"></i>
         </div>
