--- a/index1.html
+++ b/index1.html
@@ -28,8 +28,6 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/vendor.css">
 
-  <!-- script
-   ================================================== -->
   <script src="js/modernizr.js"></script>
   <script src="js/pace.min.js"></script>
 
@@ -51,22 +49,18 @@
       font-size: 64px;
     }
 
-
     .owl-container {
-      max-width: 1200px;
+      max-width: 1600px;
       margin: 0 auto;
       ;
     }
 
     .item-wrap {
-      height: 40rem;
+      height: 50rem;
       display: flex;
       align-items: center;
       justify-content: center;
     }
-
-
-
   </style>
 
   <!-- favicons
@@ -89,74 +83,6 @@
 
 
 
-
-  <!-- intro section
-   ================================================== -->
-  <section id="intro">
-
-    <div class="intro-overlay"></div>
-
-    <div class="intro-content">
-      <div class="row">
-
-        <div class="col-twelve">
-
-          <h2>quantplex analytics</h2>
-
-          <p class="intro-position">
-            <span>Analytics Consulting</span>
-          </p>
-
-        </div>
-
-      </div>
-    </div> <!-- /intro-content -->
-
-    <ul class="intro-social">
-      <li><a href="https://www.linkedin.com/in/prashant-mudgal-ba210420/"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="https://github.com/Prashantmdgl9"><i class="fa fa-github"></i></a></li>
-      <li><a href="https://prashantmdgl9.medium.com/"><i class="fa fa-medium"></i></a></li>
-      <li><a href="https://twitter.com/prashantmdgl9"><i class="fa fa-twitter"></i></a></li>
-    </ul> <!-- /intro-social -->
-
-  </section> <!-- /intro -->
-
-
-
-  <!-- about section
-   ================================================== -->
-  <section id="about">
-
-
-    <div class="row section-intro">
-      <div class="col-twelve">
-
-        <h1>Aiming Moonshots Piecemeal</h1>
-
-        <div class="intro-info">
-
-          <img src="images/brain.jpg" alt="Profile Picture">
-
-          <p class="lead"> Lets strive for better tomorrow<br><br> We at quantplex aim to synthesize solutions to esoteric and terse business problems in a manner that would impact your key business metrics positively. We try to find creative
-            solutions to the problems in the field of data analysis, deep learning, and artificial intelligence in a manner that the decisions and results can be driven. </p>
-        </div>
-
-      </div>
-    </div> <!-- /section-intro -->
-
-
-
-    <div class="row button-section">
-      <div class="col-twelve">
-        <a href="mailto:prashant.mudgal@eesti.com" <div class="icon">
-          <i class="fa fa-envelope" style="font-size:36px"></i>
-      </div>
-      </a>
-
-    </div>
-    </div>
-
-  </section>
 
 
   <!-- Portfolio Section
@@ -183,7 +109,7 @@
 
           <div class="bgrid folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/Robot.jpg" alt="">
+              <img src="images/portfolio/Robot.jpg" alt="Img via Pixabay">
               <a href="#modal-01" class="overlay">
                 <div class="folio-item-table">
                   <div class="folio-item-cell">
@@ -326,116 +252,13 @@
         </div>
       </div>
     </div> <!-- /portfolio-content -->
-
-
   </section> <!-- /portfolio -->
 
 
-  <!-- about section
-  ================================================== -->
-  <section id="about">
-
-
-    <div class="row section-intro">
-      <div class="col-twelve">
-
-        <h1>About Quantplex Analytics</h1>
-
-        <div class="intro-info">
-
-          <img src="images/brain.jpg" alt="Profile Picture">
-
-          <p class="lead">Quantplex Analytics is an analytics consulting firm.<br><br> Consultants at quantplex have more than a decade of work experience in various global consulting firms such as GE Capital Markets, Accenture, Evalueserve, Intent
-            HQ. They bring a rich globbal experience on the table and are adept in solving difficult business problems. They believe in the philosophy of green fingers and are proficient with technology, design, and client engagement and focus on
-            delivering high impactful values to the clients. </p>
-        </div>
-
-      </div>
-    </div> <!-- /section-intro -->
-
-
-  </section>
-
-
-  <!-- contact
-   ================================================== -->
-  <section id="contact">
-
-
-    <div class="row contact-info">
-
-      <div class="col-four tab-full">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
-
-        <div class="icon">
-          <i class="fa fa-whatsapp"></i>
-        </div>
-
-        <h5 style="color:red;">Whatsapp</h5>
-
-        <p> +44 (0798) 409-2663<br>
-        </p>
-
-      </div>
 
 
 
-      <div class="col-four">
 
-        <div class="icon">
-          <i class="icon-map"></i>
-        </div>
-
-        <h5 style="color:red;">We are located at</h5>
-        <p>Tallinn<br> 10001 Estonia</p>
-
-      </div>
-
-      <div class="col-four ">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <a href="mailto:prashant.mudgal@eesti.ee">
-          <div class="icon">
-            <i class="fa fa-envelope" style="font-size:36px"></i>
-          </div>
-          <h5 style="color:red;">Email Us</h5>
-        </a>
-        <p> prashant.mudgal@eesti.ee</p>
-
-      </div>
-
-
-
-    </div> <!-- /contact-info -->
-
-  </section> <!-- /contact -->
-
-
-  <!-- footer
-   ================================================== -->
-
-  <footer>
-    <div class="row">
-
-      <div class="col-six tab-full pull-right social">
-
-
-      </div>
-
-      <div class="col-six tab-full">
-        <div class="copyright">
-          <span>© Copyright qPlex 2021</span>
-        </div>
-      </div>
-
-
-
-    </div> <!-- /row -->
-  </footer>
-
-  <div id="preloader">
-    <div id="loader"></div>
-  </div>
 
   <!-- Java Script
   ================================================== -->
