--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
   <!-- favicons
 	================================================== -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/brain.jpg">
+  <link rel="icon" type="image/png" sizes="64x64" href="images/brain.jpg">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+
 
 
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -292,9 +293,9 @@
               <a href="#modal-04" class="overlay">
                 <div class="folio-item-table">
                   <div class="folio-item-cell">
-                    <h3 class="folio-title">Facial Recognition</h3>
+                    <h3 class="folio-title">Pricing</h3>
                     <span class="folio-types">
-                      Reconstruction of human faces using concepts of singular value decomposition
+                      Asserting the price elasticity of demand for products
                     </span>
                   </div>
                 </div>
@@ -310,12 +311,12 @@
             </div>
 
             <div class="description-box">
-              <h4>Facial Recognition</h4>
-              <p>Face reconstruction using principal component analysis of images. The method reduces the size of the data greatly and works with high degree of accuracy.</p>
+              <h4>Pricing</h4>
+              <p>Constructing linear pricing models to ascertain PED for products and determining what governs their demand and prices.</p>
             </div>
 
             <div class="link-box">
-              <a href="https://towardsdatascience.com/an-attempt-to-fine-tune-facial-recognition-eigenfaces-a6baa8fc0e62">Discover More</a>
+              <a href="https://towardsdatascience.com/are-avocados-elastic-9d072e47605c">Discover More</a>
 
             </div>
 
