--- a/index.html
+++ b/index.html
@@ -322,6 +322,77 @@
 
           </div> <!-- /modal-02 -->
 
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img src="images/portfolio/Music.jpg" alt="Img via Pixabay">
+              <a href="#modal-05" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Music</h3>
+                    <span class="folio-types">
+                      Music information retrieval from the Spotify playlists.
+                    </span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div> <!-- /folio-item -->
+
+
+          <div id="modal-05" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images/portfolio/Music.jpg" alt="" />
+            </div>
+
+            <div class="description-box">
+              <h4>Music</h4>
+              <p>Deep understanding of the music files through audio profiling and sprectral analysis to uncover hidden patterns.</p>
+            </div>
+
+            <div class="link-box">
+              <a href="https://towardsdatascience.com/music-psychographics-and-other-interesting-things-38f926aee856">Discover More</a>
+
+            </div>
+
+          </div> <!-- /modal-02 -->
+
+
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img src="images/portfolio/Satellite.jpg" alt="Img via Pixabay">
+              <a href="#modal-06" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Satellite</h3>
+                    <span class="folio-types">
+                      Remote sensing through your local desktop
+                    </span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div> <!-- /folio-item -->
+
+
+          <div id="modal-06" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images/portfolio/Satellite.jpg" alt="" />
+            </div>
+
+            <div class="description-box">
+              <h4>Satellite</h4>
+              <p>Running remote sensing models to uncover green areas of your city and provide cues to urban housing department on construction sites.</p>
+            </div>
+
+            <div class="link-box">
+              <a href="https://towardsdatascience.com/how-green-is-greenland-cabbe516de04">Discover More</a>
+
+            </div>
+
+          </div> <!-- /modal-02 -->
+
 
 
         </div>
