--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
 
           <!-- portfolio-wrapper -->
-
+          <!-- /modal-01 -->
           <div class="bgrid folio-item">
             <div class="item-wrap">
               <img src="images/portfolio/Robot.jpg" alt="">
@@ -214,7 +214,8 @@
               <a href="https://mighty-ocean-70011.herokuapp.com/">Discover More</a>
             </div>
 
-          </div> <!-- /modal-05 -->
+          </div>
+          <!-- /modal-02 -->
           <div class="bgrid folio-item">
             <div class="item-wrap">
               <img src="images/portfolio/Writing.jpg" alt="Img via Pixabay">
@@ -249,7 +250,8 @@
 
             </div>
 
-          </div> <!-- /modal-02 -->
+          </div>
+          <!-- /modal-03 -->
 
           <div class="bgrid folio-item">
             <div class="item-wrap">
@@ -284,7 +286,8 @@
 
             </div>
 
-          </div> <!-- /modal-02 -->
+          </div>
+          <!-- /modal-04 -->
 
 
           <div class="bgrid folio-item">
@@ -293,9 +296,9 @@
               <a href="#modal-04" class="overlay">
                 <div class="folio-item-table">
                   <div class="folio-item-cell">
-                    <h3 class="folio-title">Pricing</h3>
+                    <h3 class="folio-title">Price Elasticity</h3>
                     <span class="folio-types">
-                      Asserting the price elasticity of demand for products
+                      Understanding the price elasticity of demand for a food product.
                     </span>
                   </div>
                 </div>
@@ -320,7 +323,8 @@
 
             </div>
 
-          </div> <!-- /modal-02 -->
+          </div>
+          <!-- /modal-05 -->
 
           <div class="bgrid folio-item">
             <div class="item-wrap">
@@ -355,7 +359,9 @@
 
             </div>
 
-          </div> <!-- /modal-02 -->
+          </div>
+
+          <!-- /modal-06 -->
 
 
           <div class="bgrid folio-item">
@@ -364,9 +370,9 @@
               <a href="#modal-06" class="overlay">
                 <div class="folio-item-table">
                   <div class="folio-item-cell">
-                    <h3 class="folio-title">Satellite</h3>
+                    <h3 class="folio-title">Remote Sensing</h3>
                     <span class="folio-types">
-                      Remote sensing through your local desktop
+                      Remote sensing through your local desktop to identify vegetative regions
                     </span>
                   </div>
                 </div>
@@ -391,7 +397,48 @@
 
             </div>
 
-          </div> <!-- /modal-02 -->
+          </div> <!-- /modal-06 ends -->
+
+          <!-- /modal-07 -->
+
+
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img src="images/portfolio/soil.jpg" alt="Img via Pixabay">
+              <a href="#modal-07" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Soil Classification</h3>
+                    <span class="folio-types">
+                      Classify the soil based on the uploaded images.
+                    </span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div> <!-- /folio-item -->
+
+
+          <div id="modal-07" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images/portfolio/soil.jpg" alt="" />
+            </div>
+
+            <div class="description-box">
+              <h4>Soil Classification</h4>
+              <p>Classifying the soils into Alluvial, Red, Black, and Clay based on the images provided by the user.</p>
+              <p>Based on the classification, the user is provided with crop suggestions that will go along with the soil.</p>
+            </div>
+
+            <div class="link-box">
+              <a href="https://share.streamlit.io/prashantmdgl9/soil-analysis/main/app.py">Discover More</a>
+
+            </div>
+
+          </div> <!-- /modal-07 ends -->
+
+
 
 
 
