--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
           <img src="images/brain.jpg" alt="Profile Picture">
 
           <p class="lead">Quantplex Analytics is an analytics consulting firm.<br><br> Consultants at quantplex have more than a decade of work experience in various global consulting firms such as GE Capital Markets, Accenture, Evalueserve, Intent
-            HQ. They bring a rich globbal experience on the table and are adept in solving difficult business problems. They believe in the philosophy of green fingers and are proficient with technology, design, and client engagement and focus on
+            HQ. They bring a rich global experience on the table and are adept in solving difficult business problems. They believe in the philosophy of green fingers and are proficient with technology, design, and client engagement and focus on
             delivering high impactful values to the clients. </p>
         </div>
 
